# ising_wasm

./: Cargo.toml  LICENCE  README.md  actions.yml  index.html
.github/workflows/: continuous_deployment.yml  deploy-trunk.yml  deploy_toha.yml
docs/: index-5fdf7ae9a68c346f_bg.wasm  index-beb6dcccedf8931b.js  index-beb6dcccedf8931b_bg.wasm
src/: cell.rs  main.rs
