[package]
name = "ising-viz"
version = "0.0.0"
authors = [
    "Diego Cardoso <dige0card0s0@hotmail.com>",
    "Ilya Bogdanov <fumlead@gmail.com",
    "Junjie Huang <huangjj.27@qq.com>",
    "micouy <szpontaniczny@gmail.com>",
    "Stephen Fay <dcxstephen@gmail.com>"
]
edition = "2021"
readme = "README.md"
repository = ""
license = "MIT OR Apache-2.0"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
gloo-timers = "0.2"
yew = "0.19.3"
ndarray = "0.12"
